Completed till on hide function

--- a/Nimbus-app/src/styles.scss
+++ b/Nimbus-app/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    // background-color: rgb(221, 84, 184);
+    background-image: url("./images/bck_img.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
